Done the update shared column from open view and synchronize the rename shared column file and view(Moonshine-IDE/Moonshine-IDE#1216)

--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -1076,6 +1076,8 @@
 
 		public function loadFile(filePath:String):void
 		{
+			columnObjectList= new ArrayList();
+			dgColumns.columns= new ArrayList();
 			var xml:XML = loadLocalFileToXML(filePath);
 			var name:String = getFileNameWithoutExtension(filePath,"view");
 			
